2018-03-30 v0.49 pjacklam

 * Convert t/02pod.t -> t/release-pod.t.

 * Increment version number.

 * Fix t/option_l.t to match changes in Math::BigInt.

2018-02-03 v0.49 pjacklam

 * Improve specification of required modules in Makefile.PL.

 * Fix typo in CHANGES file.

2018-01-31 v0.48 pjacklam

 * According to the CPAN testers reports, Perl v5.10 or later is required, so
   make Perl v5.10 the minimum required version.

 * Verify that CPAN RT #102006 is fixed.

2016-12-13 v0.47 pjacklam

 * Add more logic to Makefile.PL regarding INSTALLDIRS (CPAN RT #119199
   and #119225).

2016-12-11 v0.46 pjacklam

 * Fix Makefile.PL so that this module installs over the core version.

2016-12-03 v0.45 pjacklam

 * Use ExtUtils::MakeMaker rather than Module::Install in Makefile.PL

 * Remove INSTALL file. The information is in the README file.

 * Improve documentation in BUGS and SUPPORT sections in POD in bignum.pm,
   bigint.pm, and bigrat.pm.

 * Remove unused variables in Math/BigInt/Trace.pm and Math/BigFloat/Trace.pm

 * Update README and BUGS files.

 * Remove code that was accidentally left in t/infnan.inc after debugging.

 * Remove author information in LICENSE file.

 * Trim whitespace.

 * CHANGES file now has the same formatting as other Math::BigInt-related
   distributions.

2016-11-15 v0.44 pjacklam

 * Update bundled Module::Install from version 1.16 to version 1.17.

 * Replace function calls with method calls.

 * Include patch for CPAN RT #116506.

2016-07-09 v0.43 pjacklam

 * Replace function calls with method calls.

2016-01-05 v0.42 pjacklam

 * "use strict" and "use warnings" everywhere.

 * Reformat some if the code according to the "perlstyle" man page. It makes
   the code easier for read, for me at least.

 * Add descriptions to tests.

 * Reorder CHANGES to chronological order.

 * Use bpi() as a class method, not a function.

 * Replace "use vars ..." with "our ...".

 * More descriptive variable names.

 * Start POD sections with =pod
